syntax = "proto3";
package fhs_types;

enum RegulatorType {
  REGULATOR_TYPE_UNSPECIFIED = 0;
  REGULATOR_TYPE_VALVE = 1;
  REGULATOR_TYPE_PUMP = 2;
  REGULATOR_TYPE_TAP = 3;
}
message FluidRegulator {
  optional int32 fr_id = 1;
  optional int32 gpio_pin = 2;
  optional RegulatorType regulator_type = 3;
  optional int32 pump_num = 4;
}